updated addClient to have option for throughput test