@@ -33,6 +33,15 @@ while [[ $# -gt 0 ]]; do
       shift
       shift
       ;;
+    --throughput)
+      THROUGHPUT="TRUE"
+      shift
+      ;;
+    --numPuts)
+      NUM_PUTS="$2"
+      shift
+      shift
+      ;;
     --help)
       echo "Options:"
       printf "\t-j or --jar optional. Specifies the location of the jar file to run. Default is kvstore.jar\n"
@@ -56,6 +65,16 @@ else
   mkdir "$DIR"
 fi
 
+if [[ -n ${THROUGHPUT+x} ]] && [ -z ${NUM_PUTS+x} ]; then
+    echo "--numPuts is required with --throughput"
+    exit
+fi
+
+if [[ -n ${CMD+x} ]] && [[ -n ${THROUGHPUT+x} ]]; then 
+    echo "Both --command and --throughput cannot both be used"
+    exit
+fi
+
 cp "$JAR" "$DIR/kvstore.jar"
 if [[ -n ${CMD+x} ]]; then
     cp "$CMD" "$DIR/cmd.txt"
@@ -64,6 +83,8 @@ fi
 cd "$DIR" || exit
 if [[ -n ${CMD+x} ]]; then
   java -jar "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" -jar "kvstore.jar" "client" "." "$SEED_IP" "$SEED_ID" < cmd.txt
+elif [[ -n ${THROUGHPUT+x} ]]; then 
+  java -jar "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" -jar "kvstore.jar" "client" "." "$SEED_IP" "$SEED_ID" throughput "$NUM_PUTS"
 else
   java -jar "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" -jar "kvstore.jar" "client" "." "$SEED_IP" "$SEED_ID"
 fi
